--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "uuidv1": "^1.6.14"
   }
 }
